# PDFactory

./: .dockerignore  .gitignore  .taplo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.dev.yml
src/: manage.py
src/cert/: admin.py  models.py  validators.py
src/cert/migrations/: 0001_initial.py
src/course/: admin.py  apps.py  forms.py  models.py  resources.py  services.py  signals.py
src/course/migrations/: 0001_initial.py
src/file/: admin.py  models.py
src/file/migrations/: 0001_initial.py
src/file/templatetags/: files.py
src/main/: asgi.py  settings.py  urls.py  wsgi.py
src/shared/: admin.py
